<resources>
    <string name="app_name">Echolist</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="my_list">My Lists</string>
    <string name="trending_gifts_string">Trending Gifts</string>
    <string name="my_events_string">My Events</string>
    <string name="upcoming_events_string">Upcoming Events</string>
    <string name="user_icon_string">user icon</string>
    <string name="gift_name_placeholder_string">Gift Name</string>
    <string name="image_description_placeholder_string">Image description</string>
    <string name="echolist_logo_string">Echolist logo</string>
    <string name="user_id_hint_string">User ID</string>
    <string name="password_hint_string">Password</string>
    <string name="sign_in_string">Sign In</string>
    <string name="create_account_string">Create Account</string>
    <string name="welcome_string">Welcome to</string>

    <string-array name="event_categories">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>House Warming</item>
        <item>Anniversary</item>
        <item>Graduation</item>
        <item>Networking Event</item>
        <item>Fundraiser</item>
    </string-array>

    <string-array name="visibility_options">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="wishlist_string">Wish List</string>
    <string name="save_event">Create Event</string>
    <string name="visibility">Visibility</string>
    <string name="category">Category</string>
    <string name="friends">Friends</string>
    <string name="select_date">Select Date</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="gift_description_placeholder_string">Gift description</string>
    <string name="favorite_gifts_string">Add from your Favorite Gifts</string>
    <string name="toggle_vibility_button_string">Hide</string>
    <string name="add_to_wishlist_description_string">Add to Wishlist</string>
    <item name="wishList_title" type="id" />
    <string name="event">Event</string>
    <string name="description">Description</string>
    <string name="create_gift">Add Gifts</string>
    <string name="type_to_filter_gifts">Type to add gifts</string>
    <string name="gifts">Gifts</string>


</resources>