<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="48dp"
            android:text="@string/welcome_string"
            android:textAlignment="center"
            android:textSize="24sp" />


        <ImageView
            android:id="@+id/echolist_logo"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/welcomeTextView"
            android:clickable="false"
            android:contentDescription="@string/echolist_logo_string"
            app:srcCompat="@drawable/echolist"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/userIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id_hint_string"
            android:inputType="text"
            android:layout_margin="16dp"
            android:layout_below="@+id/echolist_logo" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint_string"
            android:inputType="textPassword"
            android:layout_below="@id/userIdEditText"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_string"
            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_string"
            android:layout_below="@id/signInButton"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </RelativeLayout>
</ScrollView>
