<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WishListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarwishlist"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Wishlist"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddWishListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/add_to_wishlist_description_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_editor_absoluteY="66dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarwishlist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishlist_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/favorite_gift_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabAddWishListItem"
        app:layout_constraintVertical_bias="0.0"
        tools:listItem="@layout/activity_wishList_item_layout" />

    <Button
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBaseline_toBaselineOf="@id/favorite_gift_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/wishlist_recyclerview"
        app:layout_constraintStart_toEndOf="@id/favorite_gift_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/favorite_gifts_recyclerview"
        android:text="@string/toggle_vibility_button_string" />

    <TextView
        android:id="@+id/favorite_gift_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/wishlist_recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toggleButton"
        app:layout_constraintBottom_toTopOf="@id/favorite_gifts_recyclerview"
        android:text="@string/favorite_gifts_string" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_gifts_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_gift_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/activity_gift_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>